--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # VARIABLES
 # ---------
-title: Roland Warmerdam
-rss-title: "Roland Warmerdam's Blog"
-copyright: "Copyright 2012, Roland Warmerdam."
-githuburl: "https://github.com/Rowno/rolandwarmerdam.co.nz"
+title: qunlix
+rss-title: "qunlix's Blog"
+copyright: "Copyright 2012, qunlix"
+githuburl: "https://github.com/qunlix/qunlix.com"
 
 
 # JEKYLL
